<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.ktu.calorie_counter.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="edu.ktu.calorie_counter.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_productlist"
        android:name="edu.ktu.calorie_counter.ui.productlist.ProductListFragment"
        android:label="@string/menu_productlist"
        tools:layout="@layout/fragment_product_list" />

    <fragment
        android:id="@+id/nav_activitylist"
        android:name="edu.ktu.calorie_counter.ui.activitylist.ActivityListFragment"
        android:label="@string/menu_activitylist"
        tools:layout="@layout/fragment_activitylist" />

    <fragment
        android:id="@+id/nav_fooddiary"
        android:name="edu.ktu.calorie_counter.ui.fooddiary.FoodDiaryFragment"
        android:label="@string/menu_fooddiary"
        tools:layout="@layout/fragment_fooddiary" />

    <fragment
        android:id="@+id/nav_calculator"
        android:name="edu.ktu.calorie_counter.ui.caloriecalculator.CalorieCalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/nav_communication"
        android:name="edu.ktu.calorie_counter.ui.communication.CommunicationFragment"
        android:label="@string/menu_communication"
        tools:layout="@layout/fragment_communication" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="edu.ktu.calorie_counter.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>