<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalorieCalculatorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/wrapPad">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="Calorie Calculator"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/largeText"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Select your gender"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/regularText"
                    android:textStyle="bold" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:onClick="onRadioButtonClicked"
                        android:text="Female"
                        android:textColor="@color/colorPrimary" />

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:onClick="onRadioButtonClicked"
                        android:text="Male"
                        android:textColor="@color/colorPrimary" />

                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_the_weight_you_hope"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/regularText"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/targetWeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/largeText"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="right"
                        android:text="@string/kg"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/regularText" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Enter the current weight"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/regularText"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/currentWeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/largeText"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="right"
                        android:text="@string/kg"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/regularText" />

                </LinearLayout>

                <Button
                    android:id="@+id/calculateDayCal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="Calculate calories in a day"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryOff"
                    android:textSize="@dimen/regularText" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/you_now_get"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/regularText" />

                    <TextView
                        android:id="@+id/calorieCurrent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/empty"
                        android:textColor="@color/colorPrimary"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cal_in_a_day"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/regularText" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="To lose / gain your weight..."
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/regularText" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="You can get"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/regularText" />

                    <TextView
                        android:id="@+id/calorieTarget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/empty"
                        android:textColor="@color/colorPrimary"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cal_today"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/regularText" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>